; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/buffer/extr_industrialio-buffer-cb.c_iio_buffer_cb_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/buffer/extr_industrialio-buffer-cb.c_iio_buffer_cb_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_buffer = type { i32 }
%struct.iio_cb_buffer = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iio_buffer*)* @iio_buffer_cb_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iio_buffer_cb_release(%struct.iio_buffer* %0) #0 {
  %2 = alloca %struct.iio_buffer*, align 8
  %3 = alloca %struct.iio_cb_buffer*, align 8
  store %struct.iio_buffer* %0, %struct.iio_buffer** %2, align 8
  %4 = load %struct.iio_buffer*, %struct.iio_buffer** %2, align 8
  %5 = call %struct.iio_cb_buffer* @buffer_to_cb_buffer(%struct.iio_buffer* %4)
  store %struct.iio_cb_buffer* %5, %struct.iio_cb_buffer** %3, align 8
  %6 = load %struct.iio_cb_buffer*, %struct.iio_cb_buffer** %3, align 8
  %7 = getelementptr inbounds %struct.iio_cb_buffer, %struct.iio_cb_buffer* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @bitmap_free(i32 %9)
  %11 = load %struct.iio_cb_buffer*, %struct.iio_cb_buffer** %3, align 8
  %12 = call i32 @kfree(%struct.iio_cb_buffer* %11)
  ret void
}

declare dso_local %struct.iio_cb_buffer* @buffer_to_cb_buffer(%struct.iio_buffer*) #1

declare dso_local i32 @bitmap_free(i32) #1

declare dso_local i32 @kfree(%struct.iio_cb_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
